installer/hack/manifests/nginx-ingress-controller/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: showks-system
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: ingress-nginx
