installer/hack/manifests/nginx-ingress-controller/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: showks-system
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: ingress-nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.org/ssl-services: keycloak
  name: keycloak
  namespace: showks-system
spec:
  rules:
  - host: keycloak.stg.showks.cloudnativedays.jp
    http:
      paths:
      - backend:
          serviceName: keycloak-http
          servicePort: 80
        path: /
  tls:
  - hosts:
    - keycloak.stg.showks.cloudnativedays.jp
    secretName: showks-system/tls-certificate
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.org/ssl-services: minio-my-store
  name: minio-my-store
  namespace: showks-system
spec:
  rules:
  - host: minio-my-store.stg.showks.cloudnativedays.jp
    http:
      paths:
      - backend:
          serviceName: minio-my-store
          servicePort: 9000
        path: /
  tls:
  - hosts:
    - minio-my-store.stg.showks.cloudnativedays.jp
    secretName: showks-system/tls-certificate
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
    nginx.org/ssl-services: spinnaker
  name: rook-ceph-mgr-dashboard
  namespace: showks-system
spec:
  rules:
  - host: rook-ceph.stg.showks.cloudnativedays.jp
    http:
      paths:
      - backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: https-dashboard
        path: /
  tls:
  - hosts:
    - rook-ceph.stg.showks.cloudnativedays.jp
    secretName: showks-system/tls-certificate
